2013-01-10  Tony Chang  <tony@chromium.org>

        Speed up supplemental dependency computation
        https://bugs.webkit.org/show_bug.cgi?id=106503

        Reviewed by Adam Barth.

        Pass the IDL attributes file for generating the bindings in WebKitTestRunner.

        * WebKitTestRunner/CMakeLists.txt:

2013-01-10  Zan Dobersek  <zandobersek@gmail.com>

        Remove the ENABLE_ANIMATION_API feature define occurences
        https://bugs.webkit.org/show_bug.cgi?id=106544

        Reviewed by Simon Fraser.

        The Animation API code was removed in r137243. The ENABLE_ANIMATION_API
        feature define handling still lingers in various build systems and configurations
        but is of no use, so it should be removed.

        * Scripts/webkitperl/FeatureList.pm:
        * qmake/mkspecs/features/features.pri:

2013-01-10  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add support for loading web process extensions
        https://bugs.webkit.org/show_bug.cgi?id=105631

        Reviewed by Gustavo Noronha Silva.

        * MiniBrowser/gtk/GNUmakefile.am:
        * MiniBrowser/gtk/main.c:
        (main): Set WEBKIT_INJECTED_BUNDLE env var to use the injected
        bundle lib from build dir.
        * Scripts/webkitpy/style/checker.py: Add exceptions for GTK+ API
        located in WebProcess/InjectedBundle/API/gtk.
        * gtk/generate-gtkdoc:
        (get_webkit2_options): Scan also files in
        WebProcess/InjectedBundle/API/gtk to generate API docs.
        (get_webkit2_options.injected_bundle_src_path): Helper function to
        build paths in WebProcess/InjectedBundle/API/gtk.

2013-01-10  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [EFL][WK2] Writing immediately to created windows (open) fails
        https://bugs.webkit.org/show_bug.cgi?id=105276

        Reviewed by Kenneth Rohde Christiansen.

        Do not reset 'about:blank' url for the new pages in mini browser.

        * MiniBrowser/efl/main.c: